--- a/about.html
+++ b/about.html
@@ -129,7 +129,6 @@
 						<div class="vc_row">
 							<div class="container">
 
-								<!-- <h1 class="hero-title">Sonica <span>Katoch</span></h1> -->
 								<h1>Sonica Katoch is currently a Designer at MLSE (Maple Leaf Sports & Ent.) based in Toronto.</h1>
 
 
@@ -197,10 +196,10 @@
 	<div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
 	<div class="socials-text">Follow Me</div>
 	<ul class="socials">
-		<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/sonicakat" target="_blank">Ig</a></span></li>
+		<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/bysonica/" target="_blank">Ig</a></span></li>
 		<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/in/sonicakatoch" target="_blank">in</a></span></li>
-		<li><span class="parallax-wrap"><a class="parallax-element" href="https://twitter.com/sonicakatoch" target="_blank">Tw</a></span></li>
 		<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakatoch" target="_blank">Be</a></span></li>
+		<li><span class="parallax-wrap"><a class="parallax-element" href="https://foundation.app/sonica" target="_blank">Fdn</a></span></li>
 	</ul>
 </div>
 <!--/Footer -->
