--- a/mad-love.html
+++ b/mad-love.html
@@ -72,7 +72,7 @@
 										<ul data-breakpoint="1025" class="flexnav">
 											<li class="link menu-timeline active"><a class="link" href="#">Index</a>
 												<ul>
-													<li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love</a></li>
+                          <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love</a></li>
 													<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">PC Express</a></li>
 													<!-- <li><a class="ajax-link" href="shoppersdrugmart.html" data-type="page-transition">Shoppers Drug Mart</a></li> -->
 													<li><a class="ajax-link" href="fashiontech.html" data-type="page-transition">Fashion Tech</a></li>
@@ -114,8 +114,8 @@
 					<div id="hero-styles" class="parallax-onscroll">
 						<div id="hero-caption" class="text-align-center">
 							<div class="inner">
-								<h1 class="hero-title">Usability <span>Test</span></h1>
-								<h2 class="hero-subtitle">Testing the performance of the Google Home Mini.</h2>
+								<h1 class="hero-title">Mad <span>Love</span></h1>
+								<h2 class="hero-subtitle">Lorem Ipsum</h2>
 
 								<div class="scroll-down-wrap no-border link">
 									<a href="#" class="section-down-arrow ">
@@ -131,7 +131,7 @@
 				</div>
 				<div id="hero-bg-wrapper">
 					<div id="hero-image-parallax">
-						<div id="hero-bg-image" style="background-image:url(images/usability-hero.jpg)"></div>
+						<div id="hero-bg-image" style="background-image:url(images/madlove-hero.jpg)"></div>
 					</div>
 				</div>
 				<!--/Hero Section -->
@@ -147,18 +147,35 @@
 							<div class="container">
 
 								<div class="one_third has-animation" data-delay="10">
+
 									<h4>Personal Project</h4>
 									<h7>
-										<dl>Usability Test</dl>
-										<dl>Design & Research</dl>
-										<dl>Zero User Interface</dl>
+										<dl>Graphic Design</dl>
+										<dl>Branding</dl>
+  									<dl>UX/UI</dl>
 									</h7>
 								</div>
 
 								<div class="two_third has-animation last" data-delay="50">
-									<p>This project was conducted to determine the performance of the Google Home Mini device. I was able to test user’s interaction with its voice-automated feature, discover design flaws, and identify methods to improve efficiency.</p>
-									<!-- <a href="https://www.behance.net/gallery/75810985/Bite-Rite" target="_blank" class="link"><span>Read More</span></a> -->
+									<p>In honour of International Women’s Day, we launched a social campaign with Canada Basketball to help spark change and bring awareness to women athletes in basketball and beyond. Having the Senior Nationals Women’s team, influencers, allies, media personalities and other women athletes to write Mad Love letters to their younger selves to de-stigmatize the perception of women in sports.</p>
+									<a href="https://www.basketball.ca/news/madlove" target="_blank" class="link"><span>Read More</span></a>
 								</div>
+
+							</div>
+
+						</div>
+						<!--/Row -->
+
+
+						<!-- Row -->
+						<div class="vc_row full">
+
+							<div class="container">
+
+								<figure class="has-animation" data-delay="50" >
+									<img src="images/projects/ml01.jpg" alt="Image Title">
+									<!-- <figcaption>Image Caption</figcaption> -->
+								</figure>
 
 							</div>
 
@@ -171,7 +188,38 @@
 							<div class="container">
 
 								<figure class="has-animation" data-delay="50" >
-									<img src="images/projects/usability01.jpg" alt="Image Title">
+									<img src="images/projects/ml02.jpg" alt="Image Title">
+									<!-- <figcaption>Image Caption</figcaption> -->
+								</figure>
+
+							</div>
+
+						</div>
+						<!--/Row -->
+
+						<!-- Row -->
+						<div class="vc_row full">
+
+							<div class="container">
+
+								<figure class="has-animation" data-delay="50" >
+									<img src="images/projects/ml03.jpg" alt="Image Title">
+									<!-- <figcaption>Image Caption</figcaption> -->
+								</figure>
+
+							</div>
+
+						</div>
+						<!--/Row -->
+
+						<!-- Row -->
+						<div class="vc_row full">
+
+							<div class="container">
+
+								<figure class="has-animation" data-delay="50" >
+									<img src="images/projects/ml04.jpg" alt="Image Title">
+									<!-- <figcaption>Image Caption</figcaption> -->
 								</figure>
 
 							</div>
@@ -188,45 +236,45 @@
 							<div class="next-project-image" style="background-image:url(images/pcx-hero.jpg)"></div>
 							<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="pcexpress.html">
 								<div class="main-title">PC <span>Express</span></div>
-									<div class="main-subtitle">Next Project</div>
-								</a>
-							</div>
+								<div class="main-subtitle">Next Project</div>
+							</a>
 						</div>
-						<!--/Project Navigation -->
-
-
 					</div>
-					<!--/Main Content -->
+					<!--/Project Navigation -->
+
+
 				</div>
-				<!--/Main -->
+				<!--/Main Content -->
+			</div>
+			<!--/Main -->
 
 
-				<!-- Footer -->
-				<footer class="hidden">
-					<div id="footer-container">
+			<!-- Footer -->
+			<footer class="hidden">
+				<div id="footer-container">
 
-						<!-- <div class="copyright-wrap">
-						<div class="copyright-icon"><i class="fa fa-copyright" aria-hidden="true"></i></div>
-						<div class="copyright-text">Copyright</div>
-						<div class="copyright">
-						<p>2018 © <a class="link" target="_blank" href="https://www.clapat.com/themes/grenada/">Grenada Theme</a>. Design by <a class="link" target="_blank" href="https://www.clapat.com/">Clapat</a>.</p>
-					</div>
-				</div> -->
+					<!-- <div class="copyright-wrap">
+					<div class="copyright-icon"><i class="fa fa-copyright" aria-hidden="true"></i></div>
+					<div class="copyright-text">Copyright</div>
+					<div class="copyright">
+					<p>2018 © <a class="link" target="_blank" href="https://www.clapat.com/themes/grenada/">Grenada Theme</a>. Design by <a class="link" target="_blank" href="https://www.clapat.com/">Clapat</a>.</p>
+				</div>
+			</div> -->
 
-				<!-- <div class="socials-wrap">
+			<!-- <div class="socials-wrap">
 				<div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
 				<div class="socials-text">Follow Me</div>
 				<ul class="socials">
-				<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/sonicakat" target="_blank">Ig</a></span></li>
-				<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/in/sonicakatoch" target="_blank">in</a></span></li>
-				<li><span class="parallax-wrap"><a class="parallax-element" href="https://twitter.com/sonicakatoch" target="_blank">Tw</a></span></li>
-				<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakatoch" target="_blank">Be</a></span></li>
-			</ul>
-		</div> -->
+					<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/sonicakat" target="_blank">Ig</a></span></li>
+					<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/in/sonicakatoch" target="_blank">in</a></span></li>
+					<li><span class="parallax-wrap"><a class="parallax-element" href="https://twitter.com/sonicakatoch" target="_blank">Tw</a></span></li>
+					<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakatoch" target="_blank">Be</a></span></li>
+				</ul>
+			</div> -->
 
-	</div>
-</footer>
-<!--/Footer -->
+		</div>
+	</footer>
+	<!--/Footer -->
 
 
 </div>
