--- a/fashiontech.html
+++ b/fashiontech.html
@@ -72,6 +72,7 @@
 										<ul data-breakpoint="1025" class="flexnav">
 											<li class="link menu-timeline active"><a class="link" href="#">Index</a>
 												<ul>
+													<li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love</a></li>
 													<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">PC Express</a></li>
 													<!-- <li><a class="ajax-link" href="shoppersdrugmart.html" data-type="page-transition">Shoppers Drug Mart</a></li> -->
                           <li><a class="ajax-link" href="fashiontech.html" data-type="page-transition">Fashion Tech</a></li>
