--- a/mad-love.html
+++ b/mad-love.html
@@ -115,7 +115,7 @@
 						<div id="hero-caption" class="text-align-center">
 							<div class="inner">
 								<h1 class="hero-title">Mad <span>Love</span></h1>
-								<h2 class="hero-subtitle">Lorem Ipsum</h2>
+								<h2 class="hero-subtitle">A social campaign to bring awareness to women athletes in basketball and beyond.</h2>
 
 								<div class="scroll-down-wrap no-border link">
 									<a href="#" class="section-down-arrow ">
