--- a/mad-love.html
+++ b/mad-love.html
@@ -148,7 +148,7 @@
 
 								<div class="one_third has-animation" data-delay="10">
 
-									<h4>Personal Project</h4>
+									<h4>Professional Project</h4>
 									<h7>
 										<dl>Graphic Design</dl>
 										<dl>Branding</dl>
