--- a/mad-love.html
+++ b/mad-love.html
@@ -157,7 +157,7 @@
 								</div>
 
 								<div class="two_third has-animation last" data-delay="50">
-									<p>In honour of International Women’s Day, we launched a social campaign with Canada Basketball to help spark change and bring awareness to women athletes in basketball and beyond. Having the Senior Nationals Women’s team, influencers, allies, media personalities and other women athletes to write Mad Love letters to their younger selves to de-stigmatize the perception of women in sports.</p>
+									<p>In honour of International Women’s Day, we launched a social campaign with Canada Basketball to help spark change and bring awareness to women athletes in basketball and beyond. Having the Senior Women’s National Team, influencers, allies, media personalities and other women athletes to write Mad Love letters to their younger selves to de-stigmatize the perception of women in sports.</p>
 									<a href="https://www.basketball.ca/news/madlove" target="_blank" class="link"><span>Read More</span></a>
 								</div>
 
