--- a/mad-love.html
+++ b/mad-love.html
@@ -189,7 +189,7 @@
 
 								<figure class="has-animation" data-delay="50" >
 									<img src="images/projects/ml02.jpg" alt="Image Title">
-									<!-- <figcaption>Image Caption</figcaption> -->
+									<figcaption>Social Campaign</figcaption>
 								</figure>
 
 							</div>
@@ -204,7 +204,7 @@
 
 								<figure class="has-animation" data-delay="50" >
 									<img src="images/projects/ml03.jpg" alt="Image Title">
-									<!-- <figcaption>Image Caption</figcaption> -->
+									<figcaption>Toronto Wildpostings</figcaption>
 								</figure>
 
 							</div>
@@ -219,7 +219,7 @@
 
 								<figure class="has-animation" data-delay="50" >
 									<img src="images/projects/ml04.jpg" alt="Image Title">
-									<!-- <figcaption>Image Caption</figcaption> -->
+									<figcaption>OOH</figcaption>
 								</figure>
 
 							</div>
