--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 						<!-- Logo -->
 						<div id="logo" class="hide-ball">
 							<a class="ajax-link" data-type="page-transition" href="index.html">
-								<img class="black-logo" src="images/logo.png" alt="Sonics Logo">
-								<img class="white-logo" src="images/logo-white.png" alt="Sonica Logo">
+								<!-- <img class="black-logo" src="images/logo.png" alt="Sonics Logo">
+								<img class="white-logo" src="images/logo-white.png" alt="Sonica Logo"> -->
+								<img class="white-logo" src="images/wordmark-full.png" alt="Sonica Logo">
 							</a>
 						</div>
 						<!--/Logo -->
