--- a/index.html
+++ b/index.html
@@ -72,13 +72,15 @@
 										<ul data-breakpoint="1025" class="flexnav">
 											<li class="link menu-timeline active"><a class="link" href="#">Index</a>
 												<ul>
+													<li><a class="ajax-link" href="toronto-fifa.html" data-type="page-transition">Toronto FIFA 2026</a></li>
 													<li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love</a></li>
 													<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">PC Express</a></li>
 													<!-- <li><a class="ajax-link" href="shoppersdrugmart.html" data-type="page-transition">Shoppers Drug Mart</a></li> -->
 													<li><a class="ajax-link" href="fashiontech.html" data-type="page-transition">Fashion Tech</a></li>
 													<!-- <li><a class="ajax-link" href="patheon.html" data-type="page-transition">Patheon</a></li> -->
-													<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
-													<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li>
+													<!-- <li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
+													<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li> -->
+														<li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li>
 													<!-- <li><a class="ajax-link" href="rising-temp.html" data-type="page-transition">Rising Temp</a></li>
 													<li><a class="ajax-link" href="usability.html" data-type="page-transition">Usability Test</a></li> -->
 												</ul>
@@ -124,18 +126,36 @@
 						<!-- Section Slide -->
 						<div class="swiper-slide active" data-number="01" data-slide="1">
 							<a class="ajax-link-project" data-type="page-transition" href="mad-love.html">
-								<div class="slide-title" data-number="01"><span>Mad Love</span></div>
+								<div class="slide-title" data-number="01"><span>Toronto Fifa 2026</span></div>
 							</a>
-							<div class="slide-caption" data-slide-caption="1">A social campaign to bring awareness to women athletes in basketball and beyond.</div>
+							<div class="slide-caption" data-slide-caption="1">Designed creative for Toronto’s FIFA World Cup 2026 host city bid.</div>
 						</div>
 						<!--/Section Slide -->
 
 						<!-- Section Slide -->
 						<div class="swiper-slide" data-number="02" data-slide="2">
-							<a class="ajax-link-project" data-type="page-transition" href="pcexpress.html">
-								<div class="slide-title" data-number="02"><span>PC Express</span></div>
+							<a class="ajax-link-project" data-type="page-transition" href="mad-love.html">
+								<div class="slide-title" data-number="02"><span>Raptors Tunnel</span></div>
 							</a>
-							<div class="slide-caption" data-slide-caption="2">Designed digital creative at Loblaw Digital for Canada's simplest and most delightful online shopping experience, PC Express.</div>
+							<div class="slide-caption" data-slide-caption="2">Re-skinning the iconic Raptors Tunnel in Scotiabank Arena.</div>
+						</div>
+						<!--/Section Slide -->
+
+						<!-- Section Slide -->
+						<div class="swiper-slide" data-number="03" data-slide="3">
+							<a class="ajax-link-project" data-type="page-transition" href="mad-love.html">
+								<div class="slide-title" data-number="03"><span>Mad Love</span></div>
+							</a>
+							<div class="slide-caption" data-slide-caption="3">A social campaign to bring awareness to women athletes in basketball and beyond.</div>
+						</div>
+						<!--/Section Slide -->
+
+						<!-- Section Slide -->
+						<div class="swiper-slide" data-number="04" data-slide="4">
+							<a class="ajax-link-project" data-type="page-transition" href="pcexpress.html">
+								<div class="slide-title" data-number="04"><span>PC Express</span></div>
+							</a>
+							<div class="slide-caption" data-slide-caption="4">Designed digital creative at Loblaw Digital for Canada's simplest and most delightful online shopping experience, PC Express.</div>
 						</div>
 						<!--/Section Slide -->
 
@@ -149,11 +169,11 @@
 						<!--/Section Slide -->
 
 						<!-- Section Slide -->
-						<div class="swiper-slide" data-number="03" data-slide="3">
+						<div class="swiper-slide" data-number="05" data-slide="5">
 							<a class="ajax-link-project" data-type="page-transition" href="fashiontech.html">
-								<div class="slide-title" data-number="03"><span>Fashion Tech</span></div>
+								<div class="slide-title" data-number="05"><span>Fashion Tech</span></div>
 							</a>
-							<div class="slide-caption" data-slide-caption="3">A UX/UI design created for the Women in Fashion Technology program at Fashion Exchange Toronto.</div>
+							<div class="slide-caption" data-slide-caption="5">A UX/UI design created for the Women in Fashion Technology program at Fashion Exchange Toronto.</div>
 						</div>
 						<!--/Section Slide -->
 
@@ -167,22 +187,22 @@
 						<!--/Section Slide -->
 
 						<!-- Section Slide -->
-						<div class="swiper-slide" data-number="04" data-slide="4">
+						<!-- <div class="swiper-slide" data-number="05" data-slide="5">
 							<a class="ajax-link-project" data-type="page-transition" href="bite-rite.html">
-								<div class="slide-title" data-number="04"><span>Bite Rite</span></div>
+								<div class="slide-title" data-number="05"><span>Bite Rite</span></div>
 							</a>
-							<div class="slide-caption" data-slide-caption="4">A mobile-first UX/UI design created to provide users a holistic approach when utilizing online food delivery applications.</div>
-						</div>
+							<div class="slide-caption" data-slide-caption="5">A mobile-first UX/UI design created to provide users a holistic approach when utilizing online food delivery applications.</div>
+						</div> -->
 						<!--/Section Slide -->
 
 
 						<!-- Section Slide -->
-						<div class="swiper-slide" data-number="05" data-slide="5">
+						<!-- <div class="swiper-slide" data-number="06" data-slide="6">
 							<a class="ajax-link-project" data-type="page-transition" href="kendrick.html">
-								<div class="slide-title" data-number="05"><span>Kendrick</span></div>
+								<div class="slide-title" data-number="06"><span>Kendrick</span></div>
 							</a>
-							<div class="slide-caption" data-slide-caption="5">A modern identity created for Kendrick Lamar</div>
-						</div>
+							<div class="slide-caption" data-slide-caption="6">A modern identity created for Kendrick Lamar</div>
+						</div> -->
 						<!--/Section Slide -->
 
 						<!-- Section Slide -->
@@ -203,6 +223,15 @@
 						</div> -->
 						<!--/Section Slide -->
 
+						<!-- Section Slide -->
+						<div class="swiper-slide" data-number="06" data-slide="6">
+							<a class="ajax-link-project" data-type="page-transition" href="misc.html">
+								<div class="slide-title" data-number="06"><span>MISC.</span></div>
+							</a>
+							<div class="slide-caption" data-slide-caption="6">A collection of my creative work.</div>
+						</div>
+						<!--/Section Slide -->
+
 					</div>
 				</div>
 			</div>
@@ -212,13 +241,16 @@
 			<!-- Showcase Gallery -->
 			<div id="image-slider">
 				<div class="image-slider-wrapper">
-					<div class="slider-img" data-slide="1" data-src="images/madlove-hero.jpg"></div>
-					<div class="slider-img" data-slide="2" data-src="images/pcx-hero.jpg"></div>
+					<div class="slider-img" data-slide="1" data-src="images/toronto-fifa-hero.jpeg"></div>
+					<div class="slider-img" data-slide="2" data-src="images/raptors-tunnel-hero.jpg"></div>
+					<div class="slider-img" data-slide="3" data-src="images/madlove-hero.jpg"></div>
+					<div class="slider-img" data-slide="4" data-src="images/pcx-hero.jpg"></div>
 					<!-- <div class="slider-img" data-slide="2" data-src="images/shoppersdrugmart.jpg"></div> -->
-					<div class="slider-img" data-slide="3" data-src="images/fashiontech-hero.jpg"></div>
+					<div class="slider-img" data-slide="5" data-src="images/fashiontech-hero.jpg"></div>
+					<div class="slider-img" data-slide="6" data-src="images/fashiontech-hero.jpg"></div>
 					<!-- <div class="slider-img" data-slide="4" data-src="images/patheon-hero.jpg"></div> -->
-					<div class="slider-img" data-slide="4" data-src="images/bite-hero.jpg"></div>
-					<div class="slider-img" data-slide="5" data-src="images/kendrick-hero.jpg"></div>
+					<!-- <div class="slider-img" data-slide="5" data-src="images/bite-hero.jpg"></div>
+					<div class="slider-img" data-slide="6" data-src="images/kendrick-hero.jpg"></div> -->
 					<!-- <div class="slider-img" data-slide="7" data-src="images/rising-hero.jpg"></div>
 					<div class="slider-img" data-slide="8" data-src="images/usability-hero.jpg"></div> -->
 					<!-- <div class="hero-video-wrapper">
@@ -247,12 +279,13 @@
 <footer class="fixed">
 	<div id="footer-container">
 
-		<div id="counter-wrap" data-hover="08">
+		<div id="counter-wrap" data-hover="06">
 			<span data-slide-count="1">01</span>
 			<span data-slide-count="2">02</span>
 			<span data-slide-count="3">03</span>
 			<span data-slide-count="4">04</span>
 			<span data-slide-count="5">05</span>
+			<span data-slide-count="6">06</span>
 			<!-- <span data-slide-count="8">08</span> -->
 
 			<!-- <span data-slide-count="4">04</span> -->
