--- a/misc.html
+++ b/misc.html
@@ -72,15 +72,11 @@
 										<ul data-breakpoint="1025" class="flexnav">
 											<li class="link menu-timeline active"><a class="link" href="#">Index</a>
 												<ul>
-                          <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love</a></li>
+													<li><a class="ajax-link" href="toronto-fifa.html" data-type="page-transition">Toronto FIFA 2026</a></li>
+													<li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love</a></li>
 													<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">PC Express</a></li>
-													<!-- <li><a class="ajax-link" href="shoppersdrugmart.html" data-type="page-transition">Shoppers Drug Mart</a></li> -->
 													<li><a class="ajax-link" href="fashiontech.html" data-type="page-transition">Fashion Tech</a></li>
-													<!-- <li><a class="ajax-link" href="patheon.html" data-type="page-transition">Patheon</a></li> -->
-													<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
-													<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li>
-													<!-- <li><a class="ajax-link" href="rising-temp.html" data-type="page-transition">Rising Temp</a></li> -->
-													<!-- <li><a class="ajax-link" href="usability.html" data-type="page-transition">Usability Test</a></li> -->
+														<li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li>
 												</ul>
 											</li>
 											<li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">About</a></li>
@@ -136,77 +132,46 @@
 				</div>
 				<!--/Hero Section -->
 
-
-				<!-- Main Content -->
-				<div id="main-content">
-					<div id="main-page-content">
-
-
-						<!-- Row -->
-						<div class="vc_row row_padding_top row_padding_bottom">
-
-							<div class="container">
-
-								<div class="one_third has-animation" data-delay="10">
-
-									<h4>Toronto Raptors x HBC Tunnel</h4>
-									<h7>
-										<dl>2021-2022</dl>
-									</h7>
-								</div>
-
-								<div class="two_third has-animation last" data-delay="50">
-									<p>As the Raptors returned to the Scotiabank Arena, we wanted to re-skin the walk-in tunnel in partnership with the Hudson’s Bay Company. The tunnel will come to life through a continuation of social features along with the potential of leveraging players as an extension of the program.</p>
-									<!-- <a href="https://www.basketball.ca/news/madlove" target="_blank" class="link"><span>Read More</span></a> -->
-								</div>
-
-
-						</div>
-						<!--/Row -->
-
-
-						<!--/Row -->
-
-						<div class="vc_row row_padding_top row_padding_bottom">
-
-								<div class="container">
-
-										<figure class="has-animation" data-delay="10" >
-												<img src="images/projects/tunnel-1.png" alt="Image Title">
-												<!-- <figcaption>Toronto Raptors x Hudson's Bay Company Tunnel</figcaption> -->
-										</figure>
-
-								</div>
-
-				<div class="vc_row row_padding_top row_padding_bottom">
+					<!-- Row -->
+					<div class="vc_row row_padding_top row_padding_bottom">
 
 						<div class="container">
 
-								<figure class="has-animation" data-delay="10" >
-										<img src="images/projects/tunnel-2.png" alt="Image Title">
-										<!-- <figcaption>c</figcaption> -->
-								</figure>
+							<div class="one_third has-animation" data-delay="10">
 
-						</div>
+								<h4>Kyle Lowry, SBA Welcome Back</h4>
+								<h7>
+									<dl>2021-2022</dl>
+								</h7>
+							</div>
 
-				</div>
+							<div class="two_third has-animation last" data-delay="50">
+								<p>As the Raptors returned to the Scotiabank Arena, we wanted to re-skin the walk-in tunnel in partnership with the Hudson’s Bay Company. The tunnel will come to life through a continuation of social features along with the potential of leveraging players as an extension of the program.</p>
+								<!-- <a href="https://www.basketball.ca/news/madlove" target="_blank" class="link"><span>Read More</span></a> -->
+							</div>
 
-				<!-- Row -->
-				<div class="vc_row full row_padding_bottom">
-
-						<div class="container has-animation" data-delay="100">
-
-								<div class="carousel">
-										<div class="slide"><img src="images/projects/tunnel-3.jpg" alt="Fred Vanvleet	"></div>
-										<div class="slide"><img src="images/projects/tunnel-4.jpg" alt="Gary Trent Jr."></div>
-										<div class="slide"><img src="images/projects/tunnel-5.jpg" alt="Justin Champagnie"></div>
-										<div class="slide"><img src="images/projects/tunnel-6.jpg" alt="Dalano Banton & Scottie Barnes"></div>
-								</div>
-
-						</div>
 
 					</div>
-					<!--/Main Page Content -->
+					<!--/Row -->
+					<div class="vc_row row_padding_top row_padding_bottom">
+
+							<div class="container">
+
+									<figure class="has-animation" data-delay="10" >
+										<!-- <div class="video-wrapper"> -->
+
+										<video style="height:auto;width:100%" id="myVideo" autoplay muted loop preload="auto" >
+												<source src="video/LOWRY_GROAT.mp4" type="video/mp4">
+										</video>
+									<!-- </div> -->
+
+									</figure>
+
+							</div>
+
+					</div>
+
+
 
 					<!-- Project Navigation -->
 					<div id="project-nav">
