--- a/pcexpress.html
+++ b/pcexpress.html
@@ -72,15 +72,11 @@
 										<ul data-breakpoint="1025" class="flexnav">
 											<li class="link menu-timeline active"><a class="link" href="#">Index</a>
 												<ul>
+													<li><a class="ajax-link" href="toronto-fifa.html" data-type="page-transition">Toronto FIFA 2026</a></li>
 													<li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love</a></li>
 													<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">PC Express</a></li>
-													<!-- <li><a class="ajax-link" href="shoppersdrugmart.html" data-type="page-transition">Shoppers Drug Mart</a></li> -->
 													<li><a class="ajax-link" href="fashiontech.html" data-type="page-transition">Fashion Tech</a></li>
-													<!-- <li><a class="ajax-link" href="patheon.html" data-type="page-transition">Patheon</a></li> -->
-													<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
-													<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li>
-													<!-- <li><a class="ajax-link" href="rising-temp.html" data-type="page-transition">Rising Temp</a></li>
-													<li><a class="ajax-link" href="usability.html" data-type="page-transition">Usability Test</a></li> -->
+													<li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li>
 												</ul>
 											</li>
 											<li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">About</a></li>
