--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<a class="ajax-link" data-type="page-transition" href="index.html">
 								<!-- <img class="black-logo" src="images/logo.png" alt="Sonics Logo">
 								<img class="white-logo" src="images/logo-white.png" alt="Sonica Logo"> -->
-								<img class="white-logo" src="images/wordmark-full.png" alt="Sonica Logo">
+								<img class="white-logo" src="images/logo-white.png" alt="Sonica Logo">
 							</a>
 						</div>
 						<!--/Logo -->
@@ -242,7 +242,7 @@
 			<div id="image-slider">
 				<div class="image-slider-wrapper">
 					<div class="slider-img" data-slide="1" data-src="images/toronto-fifa-hero.jpeg"></div>
-					<div class="slider-img" data-slide="2" data-src="images/raptors-tunnel-hero.jpg"></div>
+					<div class="slider-img" data-slide="2" data-src="images/projects/raptors-tunnel-hero.jpg"></div>
 					<div class="slider-img" data-slide="3" data-src="images/madlove-hero.jpg"></div>
 					<div class="slider-img" data-slide="4" data-src="images/pcx-hero.jpg"></div>
 					<!-- <div class="slider-img" data-slide="2" data-src="images/shoppersdrugmart.jpg"></div> -->
