--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 													<!-- <li><a class="ajax-link" href="patheon.html" data-type="page-transition">Patheon</a></li> -->
 													<!-- <li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
 													<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li> -->
-														<li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li>
+														<!-- <li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li> -->
 													<!-- <li><a class="ajax-link" href="rising-temp.html" data-type="page-transition">Rising Temp</a></li>
 													<li><a class="ajax-link" href="usability.html" data-type="page-transition">Usability Test</a></li> -->
 												</ul>
@@ -224,12 +224,12 @@
 						<!--/Section Slide -->
 
 						<!-- Section Slide -->
-						<div class="swiper-slide" data-number="06" data-slide="6">
+						<!-- <div class="swiper-slide" data-number="06" data-slide="6">
 							<a class="ajax-link-project" data-type="page-transition" href="misc.html">
 								<div class="slide-title" data-number="06"><span>MISC.</span></div>
 							</a>
 							<div class="slide-caption" data-slide-caption="6">A collection of my creative work.</div>
-						</div>
+						</div> -->
 						<!--/Section Slide -->
 
 					</div>
@@ -247,7 +247,6 @@
 					<div class="slider-img" data-slide="4" data-src="images/pcx-hero.jpg"></div>
 					<!-- <div class="slider-img" data-slide="2" data-src="images/shoppersdrugmart.jpg"></div> -->
 					<div class="slider-img" data-slide="5" data-src="images/fashiontech-hero.jpg"></div>
-					<div class="slider-img" data-slide="6" data-src="images/fashiontech-hero.jpg"></div>
 					<!-- <div class="slider-img" data-slide="4" data-src="images/patheon-hero.jpg"></div> -->
 					<!-- <div class="slider-img" data-slide="5" data-src="images/bite-hero.jpg"></div>
 					<div class="slider-img" data-slide="6" data-src="images/kendrick-hero.jpg"></div> -->
@@ -285,7 +284,6 @@
 			<span data-slide-count="3">03</span>
 			<span data-slide-count="4">04</span>
 			<span data-slide-count="5">05</span>
-			<span data-slide-count="6">06</span>
 			<!-- <span data-slide-count="8">08</span> -->
 
 			<!-- <span data-slide-count="4">04</span> -->
