misc update nav

--- a/raptors-tunnel.html
+++ b/raptors-tunnel.html
@@ -76,7 +76,7 @@
 															<li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love</a></li>
 															<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">PC Express</a></li>
 															<li><a class="ajax-link" href="fashiontech.html" data-type="page-transition">Fashion Tech</a></li>
-															<li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li>
+															<!-- <li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li> -->
     												</ul>
     											</li>
     											<li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">About</a></li>
