--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 						<!-- Section Slide -->
 						<div class="swiper-slide active" data-number="01" data-slide="1">
-							<a class="ajax-link-project" data-type="page-transition" href="mad-love.html">
+							<a class="ajax-link-project" data-type="page-transition" href="toronto-fifa.html">
 								<div class="slide-title" data-number="01"><span>Toronto Fifa 2026</span></div>
 							</a>
 							<div class="slide-caption" data-slide-caption="1">Designed creative for Toronto’s FIFA World Cup 2026 host city bid.</div>
@@ -134,7 +134,7 @@
 
 						<!-- Section Slide -->
 						<div class="swiper-slide" data-number="02" data-slide="2">
-							<a class="ajax-link-project" data-type="page-transition" href="mad-love.html">
+							<a class="ajax-link-project" data-type="page-transition" href="raptors-tunnel.html">
 								<div class="slide-title" data-number="02"><span>Raptors Tunnel</span></div>
 							</a>
 							<div class="slide-caption" data-slide-caption="2">Re-skinning the iconic Raptors Tunnel in Scotiabank Arena.</div>
