raptors tunnel copy update

--- a/raptors-tunnel.html
+++ b/raptors-tunnel.html
@@ -150,7 +150,7 @@
                                 </div>
 
                                 <div class="two_third has-animation last" data-delay="50">
-                                    <p>As the Raptors returned to the Scotiabank Arena, we wanted to re-skin the walk-in tunnel in partnership with the Hudson’s Bay Company. The tunnel will come to life through a continuation of social features along with the potential of leveraging players as an extension of the program.</p>
+                                    <p>As the Raptors returned to Scotiabank Arena, we wanted to re-skin the walk-in tunnel in partnership with the Hudson’s Bay Company. This space is for players to sport their off-court fits as they get ready to play on home court repping their city.</p>
                                     <!-- <a href="https://www.behance.net/gallery/63046753/Speedo" target="_blank" class="link"><span>Read More</span></a> -->
                                 </div>
 
@@ -218,7 +218,7 @@
 
 	</div>
 	</div>
-                    </div>
+  </div>
                 	<!--/Main Page Content -->
 
                     <!-- Project Navigation -->
