--- a/misc.html
+++ b/misc.html
@@ -133,7 +133,7 @@
 				<!--/Hero Section -->
 
 					<!-- Row -->
-					<div class="vc_row row_padding_top row_padding_bottom">
+					<!-- <div class="vc_row row_padding_top row_padding_bottom">
 
 						<div class="container">
 
@@ -147,31 +147,112 @@
 
 							<div class="two_third has-animation last" data-delay="50">
 								<p>As the Raptors returned to the Scotiabank Arena, we wanted to re-skin the walk-in tunnel in partnership with the Hudson’s Bay Company. The tunnel will come to life through a continuation of social features along with the potential of leveraging players as an extension of the program.</p>
-								<!-- <a href="https://www.basketball.ca/news/madlove" target="_blank" class="link"><span>Read More</span></a> -->
 							</div>
 
 
-					</div>
+					</div> -->
 					<!--/Row -->
-					<div class="vc_row row_padding_top row_padding_bottom">
+					<!-- <div class="vc_row row_padding_top row_padding_bottom">
 
 							<div class="container">
 
 									<figure class="has-animation" data-delay="10" >
-										<!-- <div class="video-wrapper"> -->
+
 
 										<video style="height:auto;width:100%" id="myVideo" autoplay muted loop preload="auto" >
 												<source src="video/LOWRY_GROAT.mp4" type="video/mp4">
 										</video>
-									<!-- </div> -->
 
 									</figure>
 
 							</div>
 
+					</div> -->
+
+					<!-- Row -->
+					<div class="vc_row row_padding_top row_padding_bottom">
+
+						<div class="container">
+
+							<div class="one_third has-animation" data-delay="10">
+
+								<h4>Celebrating Black Excellence, Toronto Maple Leafs</h4>
+								<h7>
+									<dl>March 2022</dl>
+								</h7>
+							</div>
+
+
+					</div>
+					<!--/Row -->
+					<div class="vc_row full">
+							<div class="container">
+									<figure class="has-animation" data-delay="10" >
+										<!-- <div class="video-wrapper"> -->
+
+										<video style="height:auto;width:100%" id="myVideo" autoplay muted loop preload="auto" >
+												<source src="video/LFS_BHM_endboard.mp4" type="video/mp4">
+										</video>
+									<!-- </div> -->
+									</figure>
+							</div>
 					</div>
 
+					<!-- Row -->
+					<div class="vc_row full">
 
+						<div class="container">
+
+							<figure class="has-animation" data-delay="50" >
+								<img src="images/projects/bhm01.jpg" alt="Image Title">
+							</figure>
+
+						</div>
+
+					</div>
+					<!--/Row -->
+
+					<!-- Row -->
+					<div class="vc_row full">
+
+						<div class="container">
+
+							<figure class="has-animation" data-delay="50" >
+								<img src="images/projects/bhm01.jpg" alt="Image Title">
+							</figure>
+
+						</div>
+
+					</div>
+					<!--/Row -->
+
+					<!-- Row -->
+					<div class="vc_row full">
+
+						<div class="container">
+
+							<figure class="has-animation" data-delay="50" >
+								<img src="images/projects/bhm02.jpg" alt="Image Title">
+							</figure>
+
+						</div>
+
+					</div>
+					<!--/Row -->
+
+					<!-- Row -->
+					<div class="vc_row full">
+
+						<div class="container">
+
+							<figure class="has-animation" data-delay="50" >
+								<img src="images/projects/bhm03.jpg" alt="Image Title">
+							</figure>
+
+						</div>
+
+					</div>
+					<!--/Row -->
 
 					<!-- Project Navigation -->
 					<div id="project-nav">
