--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
 											<li class="link menu-timeline active"><a class="link" href="#">Index</a>
 												<ul>
 													<li><a class="ajax-link" href="toronto-fifa.html" data-type="page-transition">Toronto FIFA 2026</a></li>
+													<li><a class="ajax-link" href="raptors-tunnel01.html" data-type="page-transition">Toronto Raptors Tunnel</a></li>
 													<li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love</a></li>
 													<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">PC Express</a></li>
 													<!-- <li><a class="ajax-link" href="shoppersdrugmart.html" data-type="page-transition">Shoppers Drug Mart</a></li> -->
 													<li><a class="ajax-link" href="fashiontech.html" data-type="page-transition">Fashion Tech</a></li>
+													<li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li>
 													<!-- <li><a class="ajax-link" href="patheon.html" data-type="page-transition">Patheon</a></li> -->
 													<!-- <li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
 													<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li> -->
